add new java features